--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.14.x
+          go-version: 1.14
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
@@ -23,11 +23,15 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Build
-        if: startsWith(github.ref, 'refs/tags/')
         env:
           NAME: he
           BINDIR: bin
         run: make -j releases
+
+      - uses: actions/upload-artifact@v1
+        with:
+          name: build
+          path: bin
 
       - name: Upload Release
         uses: softprops/action-gh-release@v1
